--- a/style.css
+++ b/style.css
@@ -1,19 +1,45 @@
 body {
-    background-color:darkslategray
+    background-color:white;
+}
+.wrapper{
+    text-align:center;
+    margin-left:auto;
 }
 
+.btn{
+        padding:10px;
+        border-radius: 20px;
+        background-color: white;
+        border: 2px solid black;
+        min-width: 200px;
+        min-height: 80px;
+        margin-bottom: 100px;
+        font-size: 60px;
+}
 .square{
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     border: 3px solid black;
-    border-radius: 20px;
     background-color: blue;
     display:inline-block;
 }
 
+#yellow{
+    border-radius: 10px 10px 300px 10px;
+}
+
+#blue{
+    border-radius: 10px 10px 10px 300px;
+}
+#red{
+    border-radius: 10px 300px 10px 10px;
+}
+#green{
+    border-radius: 300px 10px 10px 10px;
+}
 .main-div {
     align-items: center;
-    margin-left:39%;
+    
 }
 
 .title{
